# Lotto

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  PLAN.md  docker-compose.yml  entrypoint.sh  fly.toml  main.py  pyproject.toml
.claude/: launch.json
.github/workflows/: deploy.yml
.streamlit/: config.toml
app/: main.py
app/pages/: game_detail.py  games.py
db/: __init__.py  queries.py  schema.py
deploy/: duckdns-renew.sh  nginx.conf
scoring/: ev.py
scraper/: discover.py  md_lottery.py
static/: manifest.json
