[project]
name = "lotto"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "playwright>=1.60.0",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]
